--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -53,7 +53,7 @@
         
       </div>
     </div>
-    <div class="content">{% block content %}{% endblock %}</div>
+    <div class="content home__content">{% block content %}{% endblock %}</div>
     <div class="footer">
       <img
         class="footer__logo"
