--- a/static/layout/css/layout.css
+++ b/static/layout/css/layout.css
@@ -74,7 +74,7 @@
   align-self: center;
   max-width: 1700px;
   width: 100%;
-  min-height: calc(100vh - 50px - 70px);
+  min-height: calc(100vh - var(--height-header) - var(--height-footer));
 }
 
 .footer {
