--- a/app/templates/api.html
+++ b/app/templates/api.html
@@ -10,9 +10,9 @@
     <form method="get">
         {% csrf_token %}
         <input type="text" name="consumoAtual" id="consumoAtual">
-        <input type="text" name="consumoTotal" id="consumoTotal">
         <input type="text" name="localColeta" id="localColeta">
         <input type="text" name="nodeID" id="nodeID">
+        <input type="text" name="secretKey" id="secretKey">
         <button></button>
     </form>
 </body>
